--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,12 @@ on:
   pull_request:
     branches: [ master ]
 
+on:
+  push:
+    branches: [ dev ]
+  pull_request:
+    branches: [ dev ]
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -23,11 +29,11 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: 跑單行 Shell Script
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: 跑多行 Shell Script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
