--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Codecov
+        uses: codecov/codecov-action@v1.0.13
+
       # Runs a single command using the runners shell
       - name: 跑單行 Shell Script
         run: echo Hello, world!
